--- a/poc/fitcloud-chatbot/fitapi_test.ipynb
+++ b/poc/fitcloud-chatbot/fitapi_test.ipynb
@@ -145,7 +145,7 @@
     "  # corp_month(month_from: str, month_to: str, groupBy=\"account\"):\n",
     "  start_month='202309'\n",
     "  end_month='202309'\n",
-    "  token=\"7EC9F802200080984E8947E5A6FF4F17\"\n",
+    "  token=\"\"\n",
     "\n",
     "  sum = corp_month_internal(start_month, end_month, accountId, token)\n",
     "  print(sum)\n",
