bedrock agent call ok -한글 깨짐.

--- a/poc/fitcloud-chatbot/test/bedrock-agent-call.ipynb
+++ b/poc/fitcloud-chatbot/test/bedrock-agent-call.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,33 +19,33 @@
     "agentId = \"MARTXEGJPP\"\n",
     "agentAliasId='ZUGLVYFIQH'\n",
     "sessionId  = \"fitcloud\"         # 임의로 정함\n",
-    "prompt = \"token 값은 '1F0F87553E02BB4177F440B94A77D469'입니다. account id 532805286864의 2023년 9월 자원 사용량은?\"\n"
+    "prompt = \"token 값은 '0F3916A89EBB7EDAD95C4515A0322EC0'입니다. account id 532805286864의 2023년 9월 자원 사용량은?\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'c80f2275-94d2-4abe-8a03-71c084c317c0',\n",
+       "{'ResponseMetadata': {'RequestId': '875ec0ba-8c2a-4e57-81ab-be69f2a49308',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Fri, 16 Feb 2024 09:40:46 GMT',\n",
+       "  'HTTPHeaders': {'date': 'Fri, 16 Feb 2024 10:23:39 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'transfer-encoding': 'chunked',\n",
        "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': 'c80f2275-94d2-4abe-8a03-71c084c317c0',\n",
+       "   'x-amzn-requestid': '875ec0ba-8c2a-4e57-81ab-be69f2a49308',\n",
        "   'x-amz-bedrock-agent-session-id': 'fitcloud',\n",
        "   'x-amzn-bedrock-agent-content-type': 'application/json'},\n",
        "  'RetryAttempts': 0},\n",
        " 'contentType': 'application/json',\n",
        " 'sessionId': 'fitcloud',\n",
-       " 'completion': <botocore.eventstream.EventStream at 0x7ff1042f3260>}"
+       " 'completion': <botocore.eventstream.EventStream at 0x7ff0e54b20c0>}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,20 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "EventStreamError",
-     "evalue": "An error occurred (dependencyFailedException) when calling the InvokeAgent operation: Your request couldn't be completed. Lambda function arn:aws:lambda:us-east-1:532805286864:function:fitcloud-lambda encountered a problem while processing request.The error message from the Lambda function is Unhandled. Check the Lambda function log for error details, then try your request again after fixing the error.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mEventStreamError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mevent\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mresp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcompletion\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mevent\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/dev/lib/python3.12/site-packages/botocore/eventstream.py:603\u001b[0m, in \u001b[0;36mEventStream.__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    601\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__iter__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    602\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m event \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_event_generator:\n\u001b[0;32m--> 603\u001b[0m         parsed_event \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parse_event\u001b[49m\u001b[43m(\u001b[49m\u001b[43mevent\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    604\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m parsed_event:\n\u001b[1;32m    605\u001b[0m             \u001b[38;5;28;01myield\u001b[39;00m parsed_event\n",
-      "File \u001b[0;32m~/miniconda3/envs/dev/lib/python3.12/site-packages/botocore/eventstream.py:619\u001b[0m, in \u001b[0;36mEventStream._parse_event\u001b[0;34m(self, event)\u001b[0m\n\u001b[1;32m    617\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parsed_response\n\u001b[1;32m    618\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 619\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m EventStreamError(parsed_response, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_operation_name)\n",
-      "\u001b[0;31mEventStreamError\u001b[0m: An error occurred (dependencyFailedException) when calling the InvokeAgent operation: Your request couldn't be completed. Lambda function arn:aws:lambda:us-east-1:532805286864:function:fitcloud-lambda encountered a problem while processing request.The error message from the Lambda function is Unhandled. Check the Lambda function log for error details, then try your request again after fixing the error."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chunk': {'bytes': b'532805286864 \\xea\\xb3\\x84\\xec\\xa0\\x95\\xec\\x9d\\x98 2023\\xeb\\x85\\x84 9\\xec\\x9b\\x94 \\xec\\x9e\\x90\\xec\\x9b\\x90 \\xec\\x82\\xac\\xec\\x9a\\xa9\\xeb\\x9f\\x89\\xec\\x9d\\x80 $213.55291725389998 \\xec\\x9e\\x85\\xeb\\x8b\\x88\\xeb\\x8b\\xa4.'}}\n"
      ]
     }
    ],
