--- a/poc/fitcloud-chatbot/test/bedrock-agent-call.ipynb
+++ b/poc/fitcloud-chatbot/test/bedrock-agent-call.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,28 +24,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '875ec0ba-8c2a-4e57-81ab-be69f2a49308',\n",
+       "{'ResponseMetadata': {'RequestId': '5ded5844-6cd1-4730-9d97-4cb0665990ea',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Fri, 16 Feb 2024 10:23:39 GMT',\n",
+       "  'HTTPHeaders': {'date': 'Fri, 16 Feb 2024 11:49:28 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'transfer-encoding': 'chunked',\n",
        "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': '875ec0ba-8c2a-4e57-81ab-be69f2a49308',\n",
+       "   'x-amzn-requestid': '5ded5844-6cd1-4730-9d97-4cb0665990ea',\n",
        "   'x-amz-bedrock-agent-session-id': 'fitcloud',\n",
        "   'x-amzn-bedrock-agent-content-type': 'application/json'},\n",
        "  'RetryAttempts': 0},\n",
        " 'contentType': 'application/json',\n",
        " 'sessionId': 'fitcloud',\n",
-       " 'completion': <botocore.eventstream.EventStream at 0x7ff0e54b20c0>}"
+       " 'completion': <botocore.eventstream.EventStream at 0x7f6336fa2ea0>}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,20 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'chunk': {'bytes': b'532805286864 \\xea\\xb3\\x84\\xec\\xa0\\x95\\xec\\x9d\\x98 2023\\xeb\\x85\\x84 9\\xec\\x9b\\x94 \\xec\\x9e\\x90\\xec\\x9b\\x90 \\xec\\x82\\xac\\xec\\x9a\\xa9\\xeb\\x9f\\x89\\xec\\x9d\\x80 $213.55291725389998 \\xec\\x9e\\x85\\xeb\\x8b\\x88\\xeb\\x8b\\xa4.'}}\n"
+      "532805286864 계정의 2023년 9월 자원 사용량은 $213.55291725389998 입니다.\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "completion = \"\"\n",
     "for event in resp.get('completion'):\n",
-    "    print(event)"
+    "    # print(event)\n",
+    "    chunk = event['chunk']\n",
+    "    completion = completion + chunk['bytes'].decode()\n",
+    "print(completion)"
    ]
   },
   {
