--- a/poc/fitcloud-chatbot/test/bedrock-agent-call.ipynb
+++ b/poc/fitcloud-chatbot/test/bedrock-agent-call.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,56 +15,70 @@
     ")\n",
     "# session_id = str(uuid.uuid4()).split('-')[-1]\n",
     "# print(session_id)\n",
+    "token = '00CCB9DD31EFA9D61967D1F9B33B322C'\n",
+    "accountId = '532805286864'\n",
+    "\n",
     "\n",
     "agentId = \"MARTXEGJPP\"\n",
-    "agentAliasId='ZUGLVYFIQH'\n",
+    "agentAliasId='UUHTRMUTE6'\n",
     "sessionId  = \"fitcloud\"         # 임의로 정함\n",
-    "prompt = \"token 값은 '0F3916A89EBB7EDAD95C4515A0322EC0'입니다. account id 532805286864의 2023년 9월 자원 사용량은?\"\n"
+    "# prompt = \"token 값은 '00CCB9DD31EFA9D61967D1F9B33B322C'입니다. account id 532805286864의 2023년 9월 자원 사용량은?\"\n",
+    "prompt = \"2023년 9월 자원 사용량은?\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '5ded5844-6cd1-4730-9d97-4cb0665990ea',\n",
+       "{'ResponseMetadata': {'RequestId': '280d9eda-3caf-4bab-bccb-fcec4bad1502',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Fri, 16 Feb 2024 11:49:28 GMT',\n",
+       "  'HTTPHeaders': {'date': 'Sat, 17 Feb 2024 08:45:07 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'transfer-encoding': 'chunked',\n",
        "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': '5ded5844-6cd1-4730-9d97-4cb0665990ea',\n",
+       "   'x-amzn-requestid': '280d9eda-3caf-4bab-bccb-fcec4bad1502',\n",
        "   'x-amz-bedrock-agent-session-id': 'fitcloud',\n",
        "   'x-amzn-bedrock-agent-content-type': 'application/json'},\n",
        "  'RetryAttempts': 0},\n",
        " 'contentType': 'application/json',\n",
        " 'sessionId': 'fitcloud',\n",
-       " 'completion': <botocore.eventstream.EventStream at 0x7f6336fa2ea0>}"
+       " 'completion': <botocore.eventstream.EventStream at 0x7f87a2a53cb0>}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resp = br_agnet_client.invoke_agent(agentId=agentId,agentAliasId=agentAliasId,sessionId=sessionId, inputText=prompt  )\n",
+    "resp = br_agnet_client.invoke_agent(\n",
+    "    sessionState = {\n",
+    "        'sessionAttributes': {\n",
+    "            \"token\": token,\n",
+    "            \"accountId\": accountId,\n",
+    "        },\n",
+    "    },\n",
+    "    agentId=agentId,\n",
+    "    agentAliasId=agentAliasId,\n",
+    "    sessionId=sessionId, \n",
+    "    inputText=prompt  )\n",
     "resp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "532805286864 계정의 2023년 9월 자원 사용량은 $213.55291725389998 입니다.\n"
+      "2023년 9월의 자원 사용량은 213.55291725389998달러입니다.\n"
      ]
     }
    ],
