agent call 일부 수정

--- a/poc/fitcloud-chatbot/test/agent-call3.ipynb
+++ b/poc/fitcloud-chatbot/test/agent-call3.ipynb
@@ -19,22 +19,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An error occurred (dependencyFailedException) when calling the InvokeAgent operation: Your request couldn't be completed. Lambda function arn:aws:lambda:us-east-1:532805286864:function:fitcloud-lambda encountered a problem while processing request.The error message from the Lambda function is Unhandled. Check the Lambda function log for error details, then try your request again after fixing the error.\n",
-      "\n"
+      "Based on our previous conversation, the resource usage for September 2023 is 213.55291725389998 dollars.\n"
      ]
     }
    ],
    "source": [
-    "from bedrock_agent import BedRockClient\n",
+    "from bedrock_agent2 import BedRockClient\n",
     "\n",
     "agentId = \"MARTXEGJPP\"\n",
-    "agentAliasId='ZUGLVYFIQH'\n",
+    "agentAliasId='UUHTRMUTE6'\n",
     "sessionId  = \"fitcloud\"         # 임의로 정함\n",
-    "prompt = \"token 값은 '00CCB9DD31EFA9D61967D1F9B33B322C'입니다. account id 532805286864의 2023년 9월 자원 사용량은?\"\n",
+    "\n",
+    "token = '00CCB9DD31EFA9D61967D1F9B33B322C'\n",
+    "accountId = '532805286864'\n",
+    "\n",
+    "prompt = \"2023년 9월 자원 사용량은?\"\n",
     "\n",
     "bedrock_agent = BedRockClient()\n",
     "\n",
+    "sessionState = {\n",
+    "    'sessionAttributes': {\n",
+    "        'token': token,\n",
+    "        'accountId': accountId,\n",
+    "    },\n",
+    "}\n",
+    "\n",
     "resp, _ = bedrock_agent.invoke_bedrock_agent(\n",
+    "    session_state=sessionState,\n",
     "    agent_id = agentId,\n",
     "    agent_alias_id=agentAliasId,\n",
     "    session_id='fitcloud',\n",
