--- a/poc/fitcloud-chatbot/test/bedrock-agent-call.ipynb
+++ b/poc/fitcloud-chatbot/test/bedrock-agent-call.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,11 @@
     ")\n",
     "# session_id = str(uuid.uuid4()).split('-')[-1]\n",
     "# print(session_id)\n",
-    "token = '00CCB9DD31EFA9D61967D1F9B33B322C'\n",
+    "token = '8DBE92A1F3C1AB4AABCD324756B43C80'\n",
     "accountId = '532805286864'\n",
     "\n",
-    "\n",
-    "agentId = \"MARTXEGJPP\"\n",
-    "agentAliasId='UUHTRMUTE6'\n",
+    "agentId = \"IUFLFZG1TW\"\n",
+    "agentAliasId='GDOGYNUEF9'\n",
     "sessionId  = \"fitcloud\"         # 임의로 정함\n",
     "# prompt = \"token 값은 '00CCB9DD31EFA9D61967D1F9B33B322C'입니다. account id 532805286864의 2023년 9월 자원 사용량은?\"\n",
     "prompt = \"2023년 9월 자원 사용량은?\"\n"
@@ -28,28 +27,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '280d9eda-3caf-4bab-bccb-fcec4bad1502',\n",
+       "{'ResponseMetadata': {'RequestId': 'd25601d0-c931-43ea-a311-185d38f70456',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Sat, 17 Feb 2024 08:45:07 GMT',\n",
+       "  'HTTPHeaders': {'date': 'Mon, 19 Feb 2024 08:13:13 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'transfer-encoding': 'chunked',\n",
        "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': '280d9eda-3caf-4bab-bccb-fcec4bad1502',\n",
+       "   'x-amzn-requestid': 'd25601d0-c931-43ea-a311-185d38f70456',\n",
        "   'x-amz-bedrock-agent-session-id': 'fitcloud',\n",
        "   'x-amzn-bedrock-agent-content-type': 'application/json'},\n",
        "  'RetryAttempts': 0},\n",
        " 'contentType': 'application/json',\n",
        " 'sessionId': 'fitcloud',\n",
-       " 'completion': <botocore.eventstream.EventStream at 0x7f87a2a53cb0>}"
+       " 'completion': <botocore.eventstream.EventStream at 0x7f3501b9b050>}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,14 +70,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023년 9월의 자원 사용량은 213.55291725389998달러입니다.\n"
+      "{'ResponseMetadata': {'RequestId': 'd25601d0-c931-43ea-a311-185d38f70456', 'HTTPStatusCode': 200, 'HTTPHeaders': {'date': 'Mon, 19 Feb 2024 08:13:13 GMT', 'content-type': 'application/json', 'transfer-encoding': 'chunked', 'connection': 'keep-alive', 'x-amzn-requestid': 'd25601d0-c931-43ea-a311-185d38f70456', 'x-amz-bedrock-agent-session-id': 'fitcloud', 'x-amzn-bedrock-agent-content-type': 'application/json'}, 'RetryAttempts': 0}, 'contentType': 'application/json', 'sessionId': 'fitcloud', 'completion': <botocore.eventstream.EventStream object at 0x7f3501b9b050>}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(resp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can you provide the account ID and time period (start month and end month in YYYYMM format) to get the usage for?\n"
      ]
     }
    ],
@@ -116,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
