--- a/poc/fitcloud-chatbot/test/bedrock-agent-call.ipynb
+++ b/poc/fitcloud-chatbot/test/bedrock-agent-call.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,28 +27,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'd25601d0-c931-43ea-a311-185d38f70456',\n",
+       "{'ResponseMetadata': {'RequestId': '14ad0b9e-04a2-4317-83fc-00368a1bd41f',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Mon, 19 Feb 2024 08:13:13 GMT',\n",
+       "  'HTTPHeaders': {'date': 'Mon, 19 Feb 2024 08:35:28 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'transfer-encoding': 'chunked',\n",
        "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': 'd25601d0-c931-43ea-a311-185d38f70456',\n",
+       "   'x-amzn-requestid': '14ad0b9e-04a2-4317-83fc-00368a1bd41f',\n",
        "   'x-amz-bedrock-agent-session-id': 'fitcloud',\n",
        "   'x-amzn-bedrock-agent-content-type': 'application/json'},\n",
        "  'RetryAttempts': 0},\n",
        " 'contentType': 'application/json',\n",
        " 'sessionId': 'fitcloud',\n",
-       " 'completion': <botocore.eventstream.EventStream at 0x7f3501b9b050>}"
+       " 'completion': <botocore.eventstream.EventStream at 0x7f3503163cd0>}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ResponseMetadata': {'RequestId': 'd25601d0-c931-43ea-a311-185d38f70456', 'HTTPStatusCode': 200, 'HTTPHeaders': {'date': 'Mon, 19 Feb 2024 08:13:13 GMT', 'content-type': 'application/json', 'transfer-encoding': 'chunked', 'connection': 'keep-alive', 'x-amzn-requestid': 'd25601d0-c931-43ea-a311-185d38f70456', 'x-amz-bedrock-agent-session-id': 'fitcloud', 'x-amzn-bedrock-agent-content-type': 'application/json'}, 'RetryAttempts': 0}, 'contentType': 'application/json', 'sessionId': 'fitcloud', 'completion': <botocore.eventstream.EventStream object at 0x7f3501b9b050>}\n"
+      "{'ResponseMetadata': {'RequestId': '14ad0b9e-04a2-4317-83fc-00368a1bd41f', 'HTTPStatusCode': 200, 'HTTPHeaders': {'date': 'Mon, 19 Feb 2024 08:35:28 GMT', 'content-type': 'application/json', 'transfer-encoding': 'chunked', 'connection': 'keep-alive', 'x-amzn-requestid': '14ad0b9e-04a2-4317-83fc-00368a1bd41f', 'x-amz-bedrock-agent-session-id': 'fitcloud', 'x-amzn-bedrock-agent-content-type': 'application/json'}, 'RetryAttempts': 0}, 'contentType': 'application/json', 'sessionId': 'fitcloud', 'completion': <botocore.eventstream.EventStream object at 0x7f3503163cd0>}\n"
      ]
     }
    ],
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Can you provide the account ID and time period (start month and end month in YYYYMM format) to get the usage for?\n"
+      "2023년 9월 자원 사용량은 $213.55입니다.\n"
      ]
     }
    ],
